# ai-proxy-tool

./: .gitignore  Cargo.toml  Makefile  README.md
core-gateway/: Cargo.toml
core-gateway/src/: ca.rs  hosts.rs  launcher.rs  lib.rs  server.rs  settings.rs  tls.rs
desktop/: package.json  pnpm-lock.yaml
desktop/src/: App.tsx  index.html  index.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
