[package]
name = "core-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
thiserror = "1.0.69"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
hyper = { version = "1.8.1", features = ["server", "http1", "http2", "client"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server", "client"] }
h2 = "0.4.13"
http = "1.4.0"
http-body-util = "0.1.3"
bytes = "1.11.1"
url = "2.5.8"
tower = "0.4.13"
hyper-rustls = { version = "0.27.7", features = ["http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.23"
directories = "5.0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
clap = { version = "4.6.0", features = ["derive"] }
rcgen = "0.12.1"
pem = "3.0.6"
rustls = "0.22.4"
tokio-rustls = "0.26.4"
rustls-pki-types = "1.14.0"
which = "6.0.3"

